--- a/package.json
+++ b/package.json
@@ -12,25 +12,36 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~9.0.0",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@auth0/angular-jwt": "^5.0.1",
+    "@fortawesome/fontawesome-free": "~5.6.3",
+    "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^9.4.0",
+    "animate.css": "~3.7.2",
+    "chart.js": "^2.7.2",
+    "hammerjs": "~2.0.8",
+    "ngx-material-file-input": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-angular": "^0.1001.3",
     "@angular/cli": "~9.0.1",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
