--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animate.css": "~3.7.2",
     "chart.js": "^2.7.2",
     "hammerjs": "~2.0.8",
+    "moment": "^2.29.1",
     "ngx-material-file-input": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
